--- a/about.html
+++ b/about.html
@@ -172,9 +172,7 @@
 					Across projects that encompass moving-image installation, sound and performance, Elwes seeks to
 					queer datasets, demystifying and subverting predominantly cisgender and straight AI systems. While
 					it may seem like the AI is a creative collaborator, Elwes is careful to point out that the AI has
-					neither intentionality or agency; it is a neutral agent existing within a human framework. Their
-					current works in the Zizi Project explore AI bias by queering datasets with drag performers which
-					simultaneously demystify and subvert AI systems.
+					neither intentionality or agency; it is a neutral agent existing within a human framework.
 
 
 					<!-- Jake Elwes is a media artist living and working in London. They studied at The Slade School of Fine
