about-zizi css1

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -12,8 +12,7 @@
 	================================================== -->
 	<meta charset="utf-8">
 	<title>About The Zizi Show</title>
-	<meta name="description"
-		content="About The Zizi Show.">
+	<meta name="description" content="About The Zizi Show.">
 	<meta name="author" content="Jake Elwes">
 
 	<!-- Mobile Specific Metas
@@ -32,10 +31,31 @@
 	Original LESS Stylesheet
 	<link rel="stylesheet/less" type="text/css" href="css/style.less" />
 	================================================== -->
-	<link rel="stylesheet" type="text/css" href="css/cssreset-min.css">
+	<!-- <link rel="stylesheet" type="text/css" href="css/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"> -->
+
+	<style>
+
+@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
+		body {
+			background-color: rgb(40, 8, 26);
+		}
+
+		h2 {
+			font-size: 1.5rem;
+			color: #ffffff;
+			text-align: center;
+			font-family: 'Cutive Mono', monospace;
+		}
+		p {
+			color: #ffffff;
+			text-align: center;
+			font-family: 'Cutive Mono', monospace;
+		}
+	</style>
+
 
 	<!-- <script type="text/javascript" src="js/logoText.js"></script> -->
 
@@ -73,7 +93,9 @@
 	<!-- Header - Half Logo
 	================================================== -->
 
-	<h3>Holding Page for The Zizi Show V&amp;A ABbout Page.</h3>
+	<h2>Site In Progress </h2>
+	<hr>
+		<p> The Zizi Show | V&amp;A About Page</p>
 
 	<!-- End Document
 ================================================== -->
