--- a/project-zizi-and-me.html
+++ b/project-zizi-and-me.html
@@ -119,10 +119,6 @@
 									A.I.</i>
 							</p>
 
-
-
-
-
 							<small>
 								<p>
 									With <a id="show" target="_blank" href="https://efi.ed.ac.uk/">Edinburgh Futures
@@ -149,6 +145,7 @@
 				<script>
 					function resizeDivs() {
 						$('#vid').css("height", $('#vid').width() / 1.7777);
+						$('#vid2').css("height", $('#vid').width() / 1.7777);
 						$('#vid1').css("height", $('#vid').width() / 1.5);
 						$('#vid3').css("height", $('#vid').width() / 1.5);
 
@@ -169,6 +166,9 @@
 
 				<br><br><br>
 
+
+
+
 	
 				
 				<iframe class="half"  style="padding-right: 5%;" height="360" src="https://www.youtube.com/embed/I8pEAxmDsac"
@@ -181,6 +181,17 @@
 				<br><small>Zizi & Me - Live at Gazelli Art House, 29th July 2021<br>
 				<small>Get Happy/Happy Days Are Here Again (extract) - Judy Garland and Barbra Streisand<br>
 				Me and My Shadow (extract) - Frank Sinatra and Sammy Davis Jr </small></small>
+				<br><br><br>
+
+				
+				<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/NwIhejF4_zE"
+				frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+				webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<small>Zizi & Me - The world’s first chance to see AI and real-life drag queens on stage together<br>
+				<small>Mady by Chenxuan Wang
+				</small></small>
+
+
 
 			</div><!-- // .desktop-9 -->
 
