--- a/project-zizi-show.html
+++ b/project-zizi-show.html
@@ -167,7 +167,7 @@
 									</li>
 									<li>
 										<b><a id="show" target="_blank"
-												href="https://soundcloud.com/breakaleeds">Charlie
+												href="https://soundcloud.com/breaka">Charlie
 												Baker</b></a> -
 										Sound Mixing
 									</li>
