update vam gaz links

--- a/about.html
+++ b/about.html
@@ -299,6 +299,17 @@
 					<div class="shows">
 						<h4>Current/Upcoming Exhibtions</h4>
 						<p>
+							<p>
+								<b>25th May 2023 - 20th April 2024</b> - <a id=show target="_blank"
+									href="https://www.vam.ac.uk/event/ojRbdO9D2a/the-zizi-show-by-jake-elwes-2023-24">The Zizi Show,
+								</a>Gallery 99 (solo display), Photography Centre, <b>V&amp;A / Victoria and Albert Museum</b>, South Kensington, London, UK
+							</p>
+							<p>
+								<b>1st June 2023 - 8th July 2023</b> - <a id=show target="_blank"
+									href="https://gazelliarthouse.com/exhibitions/170-jake-elwes-data-glitch-utopia/">Jake Elwes: Data • Glitch • Utopia
+								</a>(solo show), <b>Gazelli Art House</b>, London, UK
+							</p>
+							<br>
 						<p>
 							<b>3rd Mar 2023 - 27th May 2023</b> - <a id=show target="_blank"
 								href="https://honorfraser.com/?s=current&eid=199">Make Me Feel Mighty Real: Drag/tech
@@ -312,16 +323,6 @@
 								becomes
 								mind,
 							</a><b> Fundacion Telefonica Museum</b>, Madrid, Spain
-						</p>
-						<p>
-							<b>25th May 2023 - 2024</b> - <a id=show target="_blank"
-								href="https://www.vam.ac.uk/info/photography-centre">Solo Display / Commission TBA,
-							</a><b>Victoria and Albert Museum / V&amp;A Museum</b>, London, UK
-						</p>
-						<p>
-							<b>1st June 2023 - July 2023</b> - <a id=show target="_blank"
-								href="https://gazelliarthouse.com/">Solo Exhibtion TBA,
-							</a><b>Gazelli Art House</b>, London, UK
 						</p>
 						<p>
 							<b>27th Aug 2023 - 28th Jan 2024</b> - <a id=show target="_blank"
