--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -1,17 +1,29 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="about.css">
+	<!-- <link rel="stylesheet" href="about.css"> -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<link rel="stylesheet" href="output.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
 </head>
 
-<body>
-	<img src="img/about.png" class="secondary-header" draggable="false" />
-	<img src="img/Zizi banner.jpg" class="banner" draggable="false" />
-	<div class="about">
-
-		<ul class="anchors">
+<body class="bg-black text-slate-200">
+	<header class="w-full bg-cover bg-no-repeat bg-center bg-top h-96 " style="background-image: url('img/banner-tall.jpg')">
+		<h1 class="text-3xl sm:text-2xl font-italic font-bold text-center">The Zizi Show</h1>
+		<div class="w-full h-96 bg-gradient-to-t from-black"></div>
+	</header>
+	<main class="w-full px-16 lg:container lg:mx-auto">
+		<div>
+			<!-- <iframe class="w-full aspect-video"
+				src="https://www.youtube.com/embed/3c5-ABUkI_M"
+				title="Making of The Zizi Show" frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+				allowfullscreen></iframe> -->
+		</div>
+		<ul>
 			<li>
 				Videos
 			</li>
@@ -71,28 +83,33 @@
 				issues built into machine learning technology.
 			</p>
 			<p>
-				Drag is a brilliant lens through which we can explore and expose the layers of technical construction
+				Drag is a brilliant lens through which we can explore and expose the layers of technical
+				construction
 				and social bias inherent to AI.
 			</p>
 			<p>
-				Working closely with friends from the London drag scene, in Zizi we have created a ‘deep-fake’ virtual
+				Working closely with friends from the London drag scene, in Zizi we have created a ‘deep-fake’
+				virtual
 				cabaret. This deep-fake tech has enabled us to collaborate with machine learning to do drag,
 				demonstrating how drag queens, drag kings and drag things can never be replaced by artificial
 				intelligence.
 			</p>
 			<p>
-				The Zizi Project pushes the boundaries of both drag and AI to discover what AI can teach us about drag –
+				The Zizi Project pushes the boundaries of both drag and AI to discover what AI can teach us about
+				drag –
 				and what drag can teach us about AI.”
 			</p>
 		</i>
-		<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Jake Elwes</p>
+		<p>Jake Elwes</p>
 		<hr>
 
 		<h2>Technical</h2>
 
 		<p>
-			Machine learning (teaching computers to learn from data), more specifically deep-fake technology, has been
-			used to construct all the videos you see on this website. To produce a deep-fake, you start by training a
+			Machine learning (teaching computers to learn from data), more specifically deep-fake technology, has
+			been
+			used to construct all the videos you see on this website. To produce a deep-fake, you start by training
+			a
 			neural network<sup><a href="#fn1" id="ref1">1</a></sup> on a dataset of images.
 		</p>
 		<p>
@@ -106,7 +123,8 @@
 					id="ref2">2</a></sup> Once it has learnt to do this it can then start producing deep-fakes.
 		</p>
 		<p>
-			Below you can see the iterative training process of a neural network learning how to create images of Lilly
+			Below you can see the iterative training process of a neural network learning how to create images of
+			Lilly
 			SnatchDragon:
 		</p>
 
@@ -114,15 +132,16 @@
 
 		<p>
 			Using machine learning, this process iterates and improves until it can create new, fake faces which are
-			indistinguishable from the real. For Zizi the method I use is called Video-to-Video Synthesis.<sup><a
-					href="#fn3" id="ref3">3</a></sup>
+			indistinguishable from the real. For Zizi the method I use is called Video-to-Video Synthesis.
+			<sup><a href="#fn3" id="ref3">3</a></sup>
 		</p>
 		Once the neural network has been training for, let's say, three days, it is ready to be fed new movements.
 		Anyone can now control the deep-fake body by running skeleton tracking on a new video and then feeding these
 		into the neural network.
 		</p>
 		<p>
-			These visuals below show how new deep-fake images of Lilly SnatchDragon can be generated from the trained
+			These visuals below show how new deep-fake images of Lilly SnatchDragon can be generated from the
+			trained
 			neural network (here with her movement controlled by Me the Drag Queen).
 		</p>
 
@@ -132,18 +151,21 @@
 			This process was repeated to create deep fakes of all 13 of our wonderful, diverse drag cast.
 		</p>
 		<p>
-			The ‘Zizi’ character was created by simultaneously training on images of all of the performers. Not knowing
+			The ‘Zizi’ character was created by simultaneously training on images of all of the performers. Not
+			knowing
 			how to differentiate between the bodies, the result is an amalgamation, a ‘queering’ of the data.
 		</p>
 		<p>
-			Facial recognition algorithms (and deep fake technology) currently have a real problem recognising trans and
+			Facial recognition algorithms (and deep fake technology) currently have a real problem recognising trans
+			and
 			non-binary people, as well as other marginalised identities, because they’ve been trained on photos of
 			people with cis binary identities. <sup><a href="#fn4" id="ref4">4</a></sup><sup><a href="#fn5"
 					id="ref5">5</a></sup>
 		</p>
 		<p>
 			The project poses the question whether making deep fakes using queer identities becomes a means of
-			assimilation or inclusivity… or more a techno-activist method of dirtying and obfuscating the systems used
+			assimilation or inclusivity… or more a techno-activist method of dirtying and obfuscating the systems
+			used
 			to collect data on us.
 		</p>
 		<p>
@@ -154,39 +176,43 @@
 
 
 		<h2>Footnotes</h2>
-		<p><sup class="footnote" id="fn1">1. For more information see
+		<p>
+			<!-- <sup class="footnote" id="fn1">1. For more information see
 				https://deepai.org/machine-learning-glossary-and-terms/neural-network<a href="#ref1"
-					title="Jump back to footnote 1 in the text.">↩</a></sup>
+					title="Jump back to footnote 1 in the text.">↩</a></sup> -->
+		</p>
+		<p>
+			<!-- <sup class="footnote" id="fn2">2. an accuracy score calculated using the gradient descent learning
+				algorithm<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></sup> -->
 		</p>
 		<p>
 
-			<sup class="footnote" id="fn2">2. an accuracy score calculated using the gradient descent learning
-				algorithm<a href="#ref2" title="Jump back to footnote 2 in the text.">↩</a></sup>
-		</p>
-		<p>
-
-			<sup class="footnote" id="fn3">3. Video-to-Video Synthesis is a conditional generative adversarial network
-				(cGAN) developed by Wang et al. (Nvidia &amp; MIT), NeurIPS, 2018. It uses OpenPose (2018) for skeleton
-				tracking and DensePose (2018) for silhouette estimation. This technique also uses Flownet (2016) to take
+			<!-- <sup class="footnote" id="fn3">3. Video-to-Video Synthesis is a conditional generative adversarial
+				network
+				(cGAN) developed by Wang et al. (Nvidia &amp; MIT), NeurIPS, 2018. It uses OpenPose (2018) for
+				skeleton
+				tracking and DensePose (2018) for silhouette estimation. This technique also uses Flownet (2016) to
+				take
 				into account the motion in the video.<a href="#ref3"
-					title="Jump back to footnote 3 in the text.">↩</a></sup>
+					title="Jump back to footnote 3 in the text.">↩</a></sup> -->
 		</p>
 		<p>
 
-			<sup class="footnote" id="fn4">4. See Hamidi, F., Scheuerman, M.K. and Branham, S.M., 2018, April. Gender
+			<!-- <sup class="footnote" id="fn4">4. See Hamidi, F., Scheuerman, M.K. and Branham, S.M., 2018, April.
+				Gender
 				recognition or gender reductionism? The social implications of embedded gender recognition systems.
 				In Proceedings of the 2018 chi conference on human factors in computing systems (pp. 1-13).<a
-					href="#ref4" title="Jump back to footnote 4 in the text.">↩</a></sup>
+					href="#ref4" title="Jump back to footnote 4 in the text.">↩</a></sup> -->
 		</p>
 		<p>
 
-			<sup class="footnote" id="fn5">5. Excavating AI: The Politics of Images in Machine Learning Training Sets,
+			<!-- <sup class="footnote" id="fn5">5. Excavating AI: The Politics of Images in Machine Learning Training
+				Sets,
 				Kate Crawford and Trevor Paglen https://www.excavating.ai/<a href="#ref5"
-					title="Jump back to footnote 5 in the text.">↩</a></sup>
+					title="Jump back to footnote 5 in the text.">↩</a></sup> -->
 		</p>
 
 		<hr>
-
 
 		<p>
 			The Zizi Project (2019 - ongoing) is a collection of works by Jake
@@ -199,18 +225,17 @@
 		</p>
 		<hr>
 		<h2>'Zizi &amp; Me' 2020</h2>
-		<iframe width="100%" src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0"
+		<!-- <iframe src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowFullScreen></iframe>
+			allowFullScreen></iframe> -->
 		<h2>'Zizi: Queering the Dataset' 2019</h2>
-		<iframe src="https://player.vimeo.com/video/388245510" width="100%" frameborder="0" allow="autoplay; fullscreen"
-			allowFullScreen></iframe>
+		<!-- <iframe src="https://player.vimeo.com/video/388245510" frameborder="0"
+			allow="autoplay; fullscreen" allowFullScreen></iframe> -->
 		<h2>National Gallery X + FLUX - 2020</h2>
-		<iframe width="100%" src="https://www.youtube.com/embed/QOK97wutH-s" frameborder="0"
+		<!-- <iframe src="https://www.youtube.com/embed/QOK97wutH-s" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-			allowFullScreen></iframe>
-		<hr>
-	</div>
+			allowFullScreen></iframe> -->
+	</main>
 
 </body>
 
