--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -11,11 +11,15 @@
 </head>
 
 <body class="bg-black text-slate-200">
-	<header class="w-full bg-cover bg-no-repeat bg-center bg-top h-96 " style="background-image: url('img/banner-tall.jpg')">
-		<h1 class="text-3xl sm:text-2xl font-italic font-bold text-center">The Zizi Show</h1>
-		<div class="w-full h-96 bg-gradient-to-t from-black"></div>
+	<header class="w-full bg-cover bg-no-repeat bg-center bg-top h-96" style="background-image: url('img/banner-tall.jpg')">
+		<div class="w-full h-96 bg-gradient-to-t from-black to-60%">
+			<div class="text-[5rem] text-center w-full h-full">
+				<p class="mt-32 fa-regular fa-circle-play"></p>
+			</div> 
+		</div>
 	</header>
 	<main class="w-full px-16 lg:container lg:mx-auto">
+		<h1 class="text-3xl -mt-24">The Zizi Show</h1>
 		<div>
 			<!-- <iframe class="w-full aspect-video"
 				src="https://www.youtube.com/embed/3c5-ABUkI_M"
@@ -74,7 +78,7 @@
 				<b>Suzy Glass</b> - Producer
 			</li>
 		</ul>
-		<hr>
+		
 		<i>
 			<p>
 				"My latest work aims to bring together two things I love, artificial
@@ -101,7 +105,7 @@
 			</p>
 		</i>
 		<p>Jake Elwes</p>
-		<hr>
+		
 
 		<h2>Technical</h2>
 
@@ -172,7 +176,7 @@
 			The Zizi project aims to critically examine these techniques using a dataset of drag performers, in the
 			process exposing the workings of the black box which is artificial intelligence.
 		</p>
-		<hr>
+		
 
 
 		<h2>Footnotes</h2>
@@ -212,7 +216,7 @@
 					title="Jump back to footnote 5 in the text.">↩</a></sup> -->
 		</p>
 
-		<hr>
+		
 
 		<p>
 			The Zizi Project (2019 - ongoing) is a collection of works by Jake
@@ -223,7 +227,7 @@
 			using machine learning. The project explores what AI can teach us
 			about drag, and what drag can teach us about A.I.
 		</p>
-		<hr>
+		
 		<h2>'Zizi &amp; Me' 2020</h2>
 		<!-- <iframe src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
