start adding cast section

--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -2,32 +2,37 @@
 
 <head>
 	<!-- <link rel="stylesheet" href="about.css"> -->
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap"
+		rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
 		integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
 		crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="output.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-<body class="bg-black text-slate-200">
-	<header class="w-full bg-cover bg-no-repeat bg-center bg-top h-96" style="background-image: url('img/banner-tall.jpg')">
+<body class="bg-black text-zinc-300">
+	<header class="w-full bg-cover bg-no-repeat bg-center bg-top h-96"
+		style="background-image: url('img/banner-tall.jpg')">
 		<div class="w-full h-96 bg-gradient-to-t from-black to-60%">
 			<div class="text-[5rem] text-center w-full h-full">
 				<p class="mt-32 fa-regular fa-circle-play"></p>
-			</div> 
+			</div>
 		</div>
 	</header>
-	<main class="w-full px-16 lg:container lg:mx-auto">
-		<h1 class="text-3xl -mt-24">The Zizi Show</h1>
-		<div>
+	<main class="w-full">
+		<div class="px-8">
+			<h1 class="text-3xl -mt-24 text-zinc-50 font-title">The Zizi Show</h1>
+			<p class="italic">A Deepfake Drag Cabaret</p>
 			<!-- <iframe class="w-full aspect-video"
-				src="https://www.youtube.com/embed/3c5-ABUkI_M"
-				title="Making of The Zizi Show" frameborder="0"
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-				allowfullscreen></iframe> -->
-		</div>
-		<ul>
+			src="https://www.youtube.com/embed/3c5-ABUkI_M"
+			title="Making of The Zizi Show" frameborder="0"
+			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+			allowfullscreen></iframe> -->
+			<!-- <ul>
 			<li>
 				Videos
 			</li>
@@ -49,63 +54,69 @@
 			<li>
 				The Zizi Project: Other Works
 			</li>
-		</ul>
+		</ul> -->
 
+			<div class="p-4 italic">
+				<p>
+					"My latest work aims to bring together two things I love, artificial
+					intelligence, and the world of Drag performance. In an entertaining
+					and humorous way Drag has allowed me to dig into some of the social
+					issues built into machine learning technology.
+				</p>
+				<p>
+					Drag is a brilliant lens through which we can explore and expose the layers of technical
+					construction
+					and social bias inherent to AI.
+				</p>
+				<p>
+					Working closely with friends from the London drag scene, in Zizi we have created a ‘deep-fake’
+					virtual
+					cabaret. This deep-fake tech has enabled us to collaborate with machine learning to do drag,
+					demonstrating how drag queens, drag kings and drag things can never be replaced by artificial
+					intelligence.
+				</p>
+				<p>
+					The Zizi Project pushes the boundaries of both drag and AI to discover what AI can teach us about
+					drag –
+					and what drag can teach us about AI.”
+				</p>
+			</div>
+		</div>
 
-		<hr class="first">
-		<h2>Team</h2>
-		<ul>
-			<li>
-				<b>Jake Elwes</b> - Artist
-			</li>
-			<li>
-				<b>Me</b> - Performance Director
-			</li>
-			<li>
-				<b>Alexander Hill</b> - Web and streaming technology &amp;
-				development
-			</li>
-			<li>
-				<b>Toby Elwes</b> - Camera
-			</li>
-			<li>
-				<b>Edinburgh Futures</b> - Institute:
-			</li>
-			<li>
-				<b>Drew Hemment</b> - Curator
-			</li>
-			<li>
-				<b>Suzy Glass</b> - Producer
-			</li>
-		</ul>
-		
-		<i>
-			<p>
-				"My latest work aims to bring together two things I love, artificial
-				intelligence, and the world of Drag performance. In an entertaining
-				and humorous way Drag has allowed me to dig into some of the social
-				issues built into machine learning technology.
-			</p>
-			<p>
-				Drag is a brilliant lens through which we can explore and expose the layers of technical
-				construction
-				and social bias inherent to AI.
-			</p>
-			<p>
-				Working closely with friends from the London drag scene, in Zizi we have created a ‘deep-fake’
-				virtual
-				cabaret. This deep-fake tech has enabled us to collaborate with machine learning to do drag,
-				demonstrating how drag queens, drag kings and drag things can never be replaced by artificial
-				intelligence.
-			</p>
-			<p>
-				The Zizi Project pushes the boundaries of both drag and AI to discover what AI can teach us about
-				drag –
-				and what drag can teach us about AI.”
-			</p>
-		</i>
-		<p>Jake Elwes</p>
-		
+		<div class="w-full bg-zinc-700 p-8 my-4 text-center">
+			<h2 class="font-bold text-xl mb-8 text-purple-100">Team</h2>
+			@Jake Todo: add links, update descriptions
+			<ul>
+				<li>
+					<b>Jake Elwes</b> - Artist
+				</li>
+				<li>
+					<b>Me</b> - Performance Director
+				</li>
+				<li>
+					<b>Alexander Hill</b> - Web and streaming technology &amp; development
+				</li>
+				<li>
+					<b>Toby Elwes</b> - Camera
+				</li>
+				<li>
+					<b>Edinburgh Futures</b> - Institute:
+				</li>
+				<li>
+					<b>Drew Hemment</b> - Curator
+				</li>
+				<li>
+					<b>Suzy Glass</b> - Producer
+				</li>
+			</ul>
+		</div>
+
+		<div class="w-full bg-red-950 p-8 my-4 text-center">
+			<h2>Cast</h2>
+			<div id="cast-image-grid">
+				
+			</div>
+		</div>
 
 		<h2>Technical</h2>
 
@@ -176,7 +187,7 @@
 			The Zizi project aims to critically examine these techniques using a dataset of drag performers, in the
 			process exposing the workings of the black box which is artificial intelligence.
 		</p>
-		
+
 
 
 		<h2>Footnotes</h2>
@@ -216,7 +227,7 @@
 					title="Jump back to footnote 5 in the text.">↩</a></sup> -->
 		</p>
 
-		
+
 
 		<p>
 			The Zizi Project (2019 - ongoing) is a collection of works by Jake
@@ -227,7 +238,7 @@
 			using machine learning. The project explores what AI can teach us
 			about drag, and what drag can teach us about A.I.
 		</p>
-		
+
 		<h2>'Zizi &amp; Me' 2020</h2>
 		<!-- <iframe src="https://www.youtube.com/embed/vtpVr5KVvnk" frameborder="0"
 			allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
