--- a/about-zizi/index.html
+++ b/about-zizi/index.html
@@ -83,8 +83,8 @@
 			</div>
 		</div>
 
-		<div class="w-full bg-zinc-700 p-8 my-4 text-center">
-			<h2 class="font-bold text-xl mb-8 text-purple-100">Team</h2>
+		<div class="w-full bg-zinc-700 p-8 text-center">
+			<h2 class="font-bold text-xl mb-8">Team</h2>
 			@Jake Todo: add links, update descriptions
 			<ul>
 				<li>
@@ -111,10 +111,39 @@
 			</ul>
 		</div>
 
-		<div class="w-full bg-red-950 p-8 my-4 text-center">
-			<h2>Cast</h2>
-			<div id="cast-image-grid">
-				
+		<div class="w-full bg-zinc-100 p-6 text-center text-red-950">
+			<h2 class="font-bold text-xl mb-2">Cast</h2>
+			<div id="cast-image-grid" class="grid grid-cols-2 gap-4">
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/bolly.jpg" alt="Bolly Illusion Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-red-700 underline-offset-2">Bolly Illusion</p>
+				</div>
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/cara.jpg" alt="Cara Melle Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-orange-700 underline-offset-2">Cara Melle</p>
+				</div>
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/chiyo.jpg" alt="Chiyo Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-lime-600 underline-offset-2">Chiyo</p>
+				</div>
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/dakota.jpg" alt="Dakota Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-teal-700 underline-offset-2">Dakota</p>
+				</div>
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/mahatma.jpg" alt="Mahatma Khandi Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-fuchsia-700 underline-offset-2">Mahatma Khandi</p>
+				</div>
+				<div class="relative">
+					<i class="absolute right-1 top-1 fa-brands fa-instagram"></i>
+					<img src="img/cast/mark.jpg" alt="Dahc Dermur Viii Cast Photo" class="rounded-lg">
+					<p class="underline decoration-2 decoration-pink-700 underline-offset-2">Dahc Dermur Viii</p>
+				</div>
 			</div>
 		</div>
 
